tests/paczka1/small_fuzzy/60391613.err
Error in line 7: IG9AjL S353 75,7
Error in line 13: SaYi8jvPVwa S353 96,0
Error in line 8: IG9AjL A7 75,8
